--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                                 <div class="pt-6">
                                     <h4 class="text-lg font-medium mb-4">Siga-nos</h4>
                                     <div class="flex space-x-4">
-                                        <a href="#" class="w-10 h-10 rounded-full flex items-center justify-center border border-purple-400/50 hover:bg-purple-500/20 transition-all">
+                                        <a href="https://www.instagram.com/arkersoft" target="_blank" class="w-10 h-10 rounded-full flex items-center justify-center border border-purple-400/50 hover:bg-purple-500/20 transition-all">
                                             <i class="fab fa-instagram text-purple-400"></i>
                                         </a>
                                     </div>
