--- a/new.html
+++ b/new.html
@@ -98,7 +98,7 @@
                             de clientes em potencial
                         </h1>
                         <p class="text-xl text-gray-300 leading-relaxed">
-                            A melhor opção para aquisição de clientes B2B do Brasil. Automatize sua prospecção e multiplique suas vendas com dados de contato e informações de todas as empresas brasileiras.
+                            Os clientes dos seus concorrentes estão aqui. A melhor opção para aquisição leads B2B do Brasil. Automatize sua prospecção e multiplique suas vendas com dados de contato e informações de todas as empresas brasileiras.
                         </p>
                     </div>
                     <div class="flex flex-col sm:flex-row gap-4">
