--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         <div class="absolute inset-0 bg-[radial-gradient(circle_at_center,_rgba(139,92,246,0.08)_0%,transparent_50%)] pointer-events-none"></div>
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative">
             <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4">Tecnologia e <span class="text-gradient">Inteligência Artificial</span>: Impulsionando seu Negócio</h2>
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">Tecnologia e <span class="text-gradient">Inteligência Artificial</span>: Otimização de infraestrutura</h2>
                 <p class="text-gray-300 max-w-2xl mx-auto">Descubra como a Arkersoft utiliza as mais recentes inovações tecnológicas e o poder da Inteligência Artificial para transformar e acelerar o crescimento da sua empresa.</p>
             </div>
             
