new landing page

--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leads Qualificados B2B - Multiplique suas Vendas</title>
+    <title>Arkersoft - Leads Premium</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -90,8 +90,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <i class="fas fa-chart-line text-2xl text-purple-accent mr-3"></i>
-                    <span class="text-xl font-bold text-gradient">Leads Premium B2B</span>
+                    <img src="arkerlogo1.png" alt="Arkersoft Logo" class="h-8 w-auto mr-2" style="display:inline;vertical-align:middle;">
                 </div>
                 <nav class="hidden md:flex space-x-8">
                     <a href="#servico" class="text-gray-300 hover:text-purple-accent transition-colors">Serviço</a>
@@ -123,7 +122,7 @@
                         <div class="space-y-4">
                             <h1 class="text-5xl lg:text-6xl font-bold leading-tight">
                                 <span class="text-gradient">Leads Qualificados</span><br>
-                                Prontos para Vendas
+                                Prontos para Prospecção
                             </h1>
                             <p class="text-xl text-gray-300 leading-relaxed">
                                 Receba milhares de contatos de empresas brasileiras organizados por segmento, com telefone, email e dados completos. Pare de perder tempo prospectando e foque em vender.
@@ -206,48 +205,48 @@
                 </div>
 
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Cards de Tipos de Leads... -->
-                    <div class="bg-purple-dark/50 p-8 rounded-xl border border-purple-light/20 card-hover transition-all duration-300">
-                        <div class="w-16 h-16 purple-gradient rounded-lg flex items-center justify-center mb-6">
-                            <i class="fas fa-store text-2xl text-white"></i>
-                        </div>
-                        <h3 class="text-xl font-bold mb-4">Comércio e Varejo</h3>
-                        <p class="text-gray-300 mb-4">Lojas, mercados, farmácias e estabelecimentos comerciais de todos os portes.</p>
-                    </div>
-                    <div class="bg-purple-dark/50 p-8 rounded-xl border border-purple-light/20 card-hover transition-all duration-300">
-                        <div class="w-16 h-16 purple-gradient rounded-lg flex items-center justify-center mb-6">
-                            <i class="fas fa-briefcase text-2xl text-white"></i>
-                        </div>
-                        <h3 class="text-xl font-bold mb-4">Serviços Profissionais</h3>
-                        <p class="text-gray-300 mb-4">Escritórios, consultorias, clínicas e prestadores de serviços especializados.</p>
-                    </div>
+                    <!-- Cards de Tipos de Leads B2B -->
                     <div class="bg-purple-dark/50 p-8 rounded-xl border border-purple-light/20 card-hover transition-all duration-300">
                         <div class="w-16 h-16 purple-gradient rounded-lg flex items-center justify-center mb-6">
                             <i class="fas fa-industry text-2xl text-white"></i>
                         </div>
-                        <h3 class="text-xl font-bold mb-4">Indústria e Manufatura</h3>
-                        <p class="text-gray-300 mb-4">Fábricas, indústrias de transformação e empresas do setor secundário.</p>
+                        <h3 class="text-xl font-bold mb-4">Indústrias e Fabricantes</h3>
+                        <p class="text-gray-300 mb-4">Empresas que produzem bens e fornecem para outras empresas, distribuidores e revendas.</p>
                     </div>
                     <div class="bg-purple-dark/50 p-8 rounded-xl border border-purple-light/20 card-hover transition-all duration-300">
                         <div class="w-16 h-16 purple-gradient rounded-lg flex items-center justify-center mb-6">
-                            <i class="fas fa-laptop text-2xl text-white"></i>
+                            <i class="fas fa-truck-moving text-2xl text-white"></i>
                         </div>
-                        <h3 class="text-xl font-bold mb-4">Tecnologia e Inovação</h3>
-                        <p class="text-gray-300 mb-4">Empresas de TI, startups, desenvolvimento de software e serviços digitais.</p>
+                        <h3 class="text-xl font-bold mb-4">Distribuidores e Atacadistas</h3>
+                        <p class="text-gray-300 mb-4">Empresas que atuam na distribuição de produtos para o mercado corporativo.</p>
                     </div>
                     <div class="bg-purple-dark/50 p-8 rounded-xl border border-purple-light/20 card-hover transition-all duration-300">
                         <div class="w-16 h-16 purple-gradient rounded-lg flex items-center justify-center mb-6">
-                            <i class="fas fa-utensils text-2xl text-white"></i>
+                            <i class="fas fa-network-wired text-2xl text-white"></i>
                         </div>
-                        <h3 class="text-xl font-bold mb-4">Alimentação e Bebidas</h3>
-                        <p class="text-gray-300 mb-4">Restaurantes, bares, lanchonetes e estabelecimentos do setor gastronômico.</p>
+                        <h3 class="text-xl font-bold mb-4">Tecnologia e Serviços Corporativos</h3>
+                        <p class="text-gray-300 mb-4">Empresas de TI, consultorias, outsourcing, marketing B2B e soluções empresariais.</p>
+                    </div>
+                    <div class="bg-purple-dark/50 p-8 rounded-xl border border-purple-light/20 card-hover transition-all duration-300">
+                        <div class="w-16 h-16 purple-gradient rounded-lg flex items-center justify-center mb-6">
+                            <i class="fas fa-shipping-fast text-2xl text-white"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-4">Logística e Transporte</h3>
+                        <p class="text-gray-300 mb-4">Transportadoras, operadores logísticos e empresas de armazenagem para o setor empresarial.</p>
+                    </div>
+                    <div class="bg-purple-dark/50 p-8 rounded-xl border border-purple-light/20 card-hover transition-all duration-300">
+                        <div class="w-16 h-16 purple-gradient rounded-lg flex items-center justify-center mb-6">
+                            <i class="fas fa-tools text-2xl text-white"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-4">Fornecedores Industriais</h3>
+                        <p class="text-gray-300 mb-4">Empresas que fornecem insumos, máquinas, equipamentos e serviços para outras empresas.</p>
                     </div>
                     <div class="bg-purple-dark/50 p-8 rounded-xl border border-purple-light/20 card-hover transition-all duration-300">
                         <div class="w-16 h-16 purple-gradient rounded-lg flex items-center justify-center mb-6">
                             <i class="fas fa-map-marker-alt text-2xl text-white"></i>
                         </div>
-                        <h3 class="text-xl font-bold mb-4">Segmentação Regional</h3>
-                        <p class="text-gray-300 mb-4">Leads organizados por estado, cidade ou região específica do Brasil.</p>
+                        <h3 class="text-xl font-bold mb-4">Segmentação Personalizada</h3>
+                        <p class="text-gray-300 mb-4">Leads organizados por porte, capital social, setores de atividade, data de abertura, cidade, região específica do Brasil, com whatsapp, email  e muito mais.</p>
                     </div>
                 </div>
             </div>
@@ -260,14 +259,14 @@
                     <h2 class="text-4xl font-bold mb-4">
                         <span class="text-gradient">Pacotes de Leads</span>
                     </h2>
-                    <p class="text-xl text-gray-300">Escolha o pacote ideal para o seu volume de prospecção</p>
+                    <p class="text-xl text-gray-300">Escolha o pacote ideal para o seu volume de prospecção, estratégia e tamanho da equipe</p>
                 </div>
 
                 <div class="grid lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
                     <!-- Pacote Starter -->
                     <div class="bg-purple-dark/50 rounded-2xl p-8 border border-purple-light/20 hover:border-purple-accent/50 transition-all duration-300 flex flex-col">
                         <div class="text-center mb-8">
-                            <h3 class="text-2xl font-bold mb-2">Starter</h3>
+                            <h3 class="text-2xl font-bold mb-2">Starter (5.000 leads)</h3>
                             <div class="text-4xl font-bold text-purple-accent mb-2">R$ 97</div>
                             <div class="text-gray-400">Ideal para começar</div>
                         </div>
@@ -282,7 +281,7 @@
                             <span class="bg-purple-accent text-white px-4 py-1 rounded-full text-sm font-bold">MAIS POPULAR</span>
                         </div>
                         <div class="text-center mb-8">
-                            <h3 class="text-2xl font-bold mb-2">Professional</h3>
+                            <h3 class="text-2xl font-bold mb-2">Professional (15.000 leads)</h3>
                             <div class="text-4xl font-bold text-purple-accent mb-2">R$ 197</div>
                             <div class="text-gray-400">Máximo resultado</div>
                         </div>
@@ -294,7 +293,7 @@
                     <!-- Pacote Enterprise -->
                     <div class="bg-purple-dark/50 rounded-2xl p-8 border border-purple-light/20 hover:border-purple-accent/50 transition-all duration-300 flex flex-col">
                         <div class="text-center mb-8">
-                            <h3 class="text-2xl font-bold mb-2">Enterprise</h3>
+                            <h3 class="text-2xl font-bold mb-2">Enterprise (50.000 leads)</h3>
                             <div class="text-4xl font-bold text-purple-accent mb-2">R$ 397</div>
                             <div class="text-gray-400">Volume industrial</div>
                         </div>
@@ -312,11 +311,11 @@
             <div class="container mx-auto px-6">
                 <div class="grid md:grid-cols-4 gap-8 text-center">
                     <div>
-                        <div class="number-counter pulse-animation">+60M</div>
+                        <div class="number-counter pulse-animation">+60 Milhões</div>
                         <div class="text-gray-300">Empresas na Base</div>
                     </div>
                     <div>
-                        <div class="number-counter pulse-animation">98%</div>
+                        <div class="number-counter pulse-animation">100%</div>
                         <div class="text-gray-300">Taxa de Precisão</div>
                     </div>
                     <div>
@@ -384,7 +383,7 @@
                             Como os leads são coletados?
                             <i class="fas fa-chevron-down transform transition-transform"></i>
                         </summary>
-                        <p class="text-gray-300 mt-4">Nossos leads são coletados de fontes públicas e parceiros de dados, passando por um rigoroso processo de verificação e enriquecimento para garantir a qualidade e precisão das informações.</p>
+                        <p class="text-gray-300 mt-4">Nossos leads são coletados de fontes públicas e parceiros de dados, passando por um rigoroso processo de limpeza, verificação e enriquecimento para garantir a qualidade e precisão das informações.</p>
                     </details>
                     <details class="bg-purple-dark/50 p-6 rounded-lg border border-purple-light/20 cursor-pointer">
                         <summary class="font-bold text-lg flex justify-between items-center">
@@ -398,7 +397,7 @@
                             Posso pedir uma segmentação personalizada?
                             <i class="fas fa-chevron-down transform transition-transform"></i>
                         </summary>
-                        <p class="text-gray-300 mt-4">Sim! Além dos segmentos prontos, oferecemos a possibilidade de criar uma lista totalmente personalizada de acordo com suas necessidades. Entre em contato para um orçamento customizado.</p>
+                        <p class="text-gray-300 mt-4">Sim! Todas nossos arquivos são totalmente personalizados e individuais para cada cliente, de acordo com suas necessidades.</p>
                     </details>
                     <details class="bg-purple-dark/50 p-6 rounded-lg border border-purple-light/20 cursor-pointer">
                         <summary class="font-bold text-lg flex justify-between items-center">
@@ -418,8 +417,7 @@
             <div class="grid md:grid-cols-3 gap-12 mb-8">
                 <div>
                     <div class="flex items-center mb-4">
-                        <i class="fas fa-chart-line text-2xl text-purple-accent mr-3"></i>
-                        <span class="text-xl font-bold text-gradient">Leads Premium B2B</span>
+                        <img src="arkerlogo1.png" alt="Arkersoft Logo" class="h-8 w-auto mr-2" style="display:inline;vertical-align:middle;">
                     </div>
                     <p class="text-gray-400">Acelerando suas vendas com dados inteligentes.</p>
                 </div>
@@ -436,16 +434,15 @@
                     <h4 class="font-bold text-lg mb-4">Contato</h4>
                     <ul class="space-y-3 text-gray-400">
                         <li class="flex items-center"><i class="fab fa-whatsapp text-purple-accent mr-3"></i> (19) 99820-5608</li>
-                        <li class="flex items-center"><i class="fas fa-envelope text-purple-accent mr-3"></i> contato@leadspremiumb2b.com</li>
+                        <li class="flex items-center"><i class="fas fa-envelope text-purple-accent mr-3"></i> arkersoft@arkersoft.com</li>
                     </ul>
                     <div class="flex space-x-4 mt-4">
                         <a href="#" class="text-gray-400 hover:text-purple-accent"><i class="fab fa-instagram text-2xl"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-purple-accent"><i class="fab fa-linkedin text-2xl"></i></a>
                     </div>
                 </div>
             </div>
             <div class="text-center text-gray-500 border-t border-purple-light/10 pt-8">
-                &copy; 2024 Leads Premium B2B. Todos os direitos reservados.
+                &copy; 2025 Arkersoft. Todos os direitos reservados.
             </div>
         </div>
     </footer>
