js particles changer

--- a/test.html
+++ b/test.html
@@ -419,7 +419,7 @@
                     <div class="flex items-center mb-4">
                         <img src="arkerlogo1.png" alt="Arkersoft Logo" class="h-8 w-auto mr-2" style="display:inline;vertical-align:middle;">
                     </div>
-                    <p class="text-gray-400">Acelerando suas vendas com dados inteligentes.</p>
+                    <p class="text-gray-400">Acelerando suas vendas com dados filtrados.</p>
                 </div>
                 <div>
                     <h4 class="font-bold text-lg mb-4">Links Rápidos</h4>
